Add title font and transform on movie card

--- a/src/MovieTile.css
+++ b/src/MovieTile.css
@@ -6,10 +6,15 @@
   max-width: 20vw;
   border-radius: 5%;
   transition: 1000ms;
+  /* opacity: 70%; */
 }
 
 .movie-img:hover {
-  max-width: 22vw;
+  /* opacity: 100%; */
+
+  /* max-width: 22vw; */
+
+  transform: scale(1.1);
   border-radius: 5%;
   transition: 500ms;
 }
