--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,13 @@ body {
   color: whitesmoke;
 }
 
+header {
+  background-color: #08143d;
+  /* position: fixed; */
+  width: 100%;
+}
+
 h1 {
   font-size: 4vw;
-  font-family: 'Fredoka One', cursive;
+  font-family: 'Dela Gothic One', cursive;
 }
