--- a/src/MovieModule.css
+++ b/src/MovieModule.css
@@ -8,31 +8,36 @@ main {
 }
 
 .movie-info-container {
-  display: flex;
-  width: 80vw;
-  height: 70vh;
-  justify-content: space-around;
-  align-content: center;
-  align-items: center;
-  background-color: #2d375b;
-  border-radius: 15px;
+  position: relative;
+  z-index: 1;
+  left: 17em;
+  top: 8px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
 .movie-mod {
   display: flex;
-  width: 80vw;
-  height: 100%;
+  width: 66vw;
+  height: 42vw;
   justify-content: space-around;
   align-content: center;
   align-items: center;
-  background-color: #2d375b;
-  border-radius: 15px;
+  border-radius: 1em;
+  z-index: -1;
+  /* background-color: #2d375b; */
+  /* background-color: rgba(218, 6, 6, 0.2); */
 }
 
 .movie-poster {
+  margin-right: 2vw;
+  margin-left: 2vw;
   height: 30vw;
-  border-radius: 15px;
-  border: 3px solid white;
+  border-radius: 1em;
+  box-shadow: 0 1px 1px rgba(200, 195, 195, 0.075),
+    0 2px 2px rgba(176, 176, 176, 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px rgba(189, 189, 189, 0.075), 0 16px 16px rgba(215, 215, 215, 0.075);
 }
 
 .text-container {
@@ -42,12 +47,13 @@ main {
   height: 10vw;
   justify-content: center;
   border-radius: 1em;
+  position: relative;
+  align-items: center;
   font-family: sans-serif;
   background-color: #2d375b;
-}
-
-.bottom-section {
-  height: 50%;
+  overflow-y: scroll;
+  border-bottom-left-radius: 0vw;
+  border-top-left-radius: 0vw;
 }
 
 h2 {
