--- a/src/MovieModule.css
+++ b/src/MovieModule.css
@@ -5,16 +5,16 @@
 main {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .movie-info-container {
   position: relative;
   z-index: 1;
-  left: 17em;
   top: 8px;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  width: 66vw;
+  height: 42vw;
+  /* overflow: auto; */
 }
 
 .movie-mod {
@@ -24,10 +24,9 @@ main {
   justify-content: space-around;
   align-content: center;
   align-items: center;
-  border-radius: 1em;
+  border-radius: 2vw;
+  /* isn't consistent with text container border radius*/
   z-index: -1;
-  /* background-color: #2d375b; */
-  /* background-color: rgba(218, 6, 6, 0.2); */
 }
 
 .movie-poster {
@@ -41,17 +40,18 @@ main {
 }
 
 .text-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   width: 30vh;
   height: 10vw;
   justify-content: center;
-  border-radius: 1em;
   position: relative;
   align-items: center;
   font-family: sans-serif;
   background-color: #2d375b;
   overflow-y: scroll;
+  border-radius: 2vw;
   border-bottom-left-radius: 0vw;
   border-top-left-radius: 0vw;
 }
