--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   pointer-events: none;
 }
 
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -27,15 +29,23 @@ header {
 }
 
 #popcornIcon {
-  height: 20vw;
-  padding-bottom: 3vw;
+  height: 10vw;
+  margin-bottom: -1.5vw;
   -webkit-animation: rotate-scale-up 0.65s linear both;
   animation: rotate-scale-up 0.65s linear both;
 }
 
+.title-bar {
+  display: flex;
+  justify-content: center;
+}
+
 .title {
+  margin-top: 3vw;
+  cursor: pointer;
   -webkit-animation: text-focus-in 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   animation: text-focus-in 2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  animation-delay: 2ms;
 }
 
 .App-link {
