Add some minor organizational changes for styling

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ header {
   width: 100%;
 }
 
+/* main {
+  width: 120%;
+} */
+
 h1 {
   font-size: 4vw;
   font-family: 'Dela Gothic One', cursive;
