--- a/src/index.css
+++ b/src/index.css
@@ -12,39 +12,45 @@ https://fonts.google.com/specimen/Alfa+Slab+One);
 } */
 
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #071234;
-  color: whitesmoke;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: #071234;
+	color: whitesmoke;
 }
 
 header {
-  background-color: #071234;
-  width: 100%;
+	background-color: #071234;
+	width: 100%;
 }
 
 /* main {
   width: 120%;
 } */
 
-h1 {
-  font-size: 4vw;
-  font-family: 'Dela Gothic One', cursive;
+h1,
+h2 {
+	font-size: 4vw;
+	font-family: 'Dela Gothic One', cursive;
 }
+
+h2 {
+	font-size: 1vw;
+}
+
 button {
-  background-color: #071234;
-  color: whitesmoke;
-  border: solid #071234;
-  font-size: 1.3em;
-  padding: 1vw;
-  width: 15em;
-  border-radius: 3em;
+	background-color: #071234;
+	color: whitesmoke;
+	border: solid #071234;
+	font-size: 1.3em;
+	padding: 1vw;
+	width: 15em;
+	border-radius: 3em;
 }
 
 button:hover {
-  background-color: whitesmoke;
-  border: solid whitesmoke;
-  color: #071234;
+	background-color: whitesmoke;
+	border: solid whitesmoke;
+	color: #071234;
 }
