--- a/src/Trailer.css
+++ b/src/Trailer.css
@@ -14,4 +14,42 @@
 .trailer {
 	border: 0.5em solid black;
 	border-radius: 0.5em;
+	-webkit-animation: slide-in-elliptic-bottom-fwd 1.5s
+		cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+	animation: slide-in-elliptic-bottom-fwd 1.5s
+		cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+/* ------- Animations ------- */
+@-webkit-keyframes slide-in-elliptic-bottom-fwd {
+	0% {
+		-webkit-transform: translateY(600px) rotateX(30deg) scale(0);
+		transform: translateY(600px) rotateX(30deg) scale(0);
+		-webkit-transform-origin: 50% 100%;
+		transform-origin: 50% 100%;
+		opacity: 0;
+	}
+	100% {
+		-webkit-transform: translateY(0) rotateX(0) scale(1);
+		transform: translateY(0) rotateX(0) scale(1);
+		-webkit-transform-origin: 50% -1400px;
+		transform-origin: 50% -1400px;
+		opacity: 1;
+	}
+}
+@keyframes slide-in-elliptic-bottom-fwd {
+	0% {
+		-webkit-transform: translateY(600px) rotateX(30deg) scale(0);
+		transform: translateY(600px) rotateX(30deg) scale(0);
+		-webkit-transform-origin: 50% 100%;
+		transform-origin: 50% 100%;
+		opacity: 0;
+	}
+	100% {
+		-webkit-transform: translateY(0) rotateX(0) scale(1);
+		transform: translateY(0) rotateX(0) scale(1);
+		-webkit-transform-origin: 50% -1400px;
+		transform-origin: 50% -1400px;
+		opacity: 1;
+	}
 }
