Add functionality for escaping error page

--- a/src/AllMovies.css
+++ b/src/AllMovies.css
@@ -1,6 +1,6 @@
 .movies-container {
-  padding: 40px;
-  grid-gap: 40px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+	padding: 2.5em;
+	grid-gap: 2.5em;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
 }
