--- a/src/MovieModule.css
+++ b/src/MovieModule.css
@@ -58,6 +58,7 @@ main {
 }
 
 .movie-poster {
+	display: none;
 	margin-right: 2vw;
 	margin-left: 2vw;
 	height: 30vw;
@@ -75,6 +76,9 @@ main {
 	border-radius: 2vw;
 	border-bottom-left-radius: 0vw;
 	border-top-left-radius: 0vw;
+	height: '40vw';
+	width: '44vw';
+	padding: '1vw';
 }
 
 #backArrow {
@@ -118,4 +122,30 @@ p {
 	letter-spacing: 0.05em;
 	font-size: 1.2em;
 	padding-bottom: 2em;
+}
+
+
+@media screen and (max-width: 500px) {
+	.text-container {
+		font-size: .75em;
+		width: 100%;
+		height: 100%;
+	}
+	.movie-details {
+		font-size: .95em;
+	}
+	.movie-mod {
+		width: 100vw;
+		height: 100vw;
+	}
+	#watchTrailer {
+		font-size: 2em;
+	}
+	.overview {
+		width: 85vw;
+	}
+	.movie-poster,
+	#backArrow {
+		display: none;
+	}
 }
