--- a/src/MovieModule.css
+++ b/src/MovieModule.css
@@ -58,7 +58,6 @@ main {
 }
 
 .movie-poster {
-	display: none;
 	margin-right: 2vw;
 	margin-left: 2vw;
 	height: 30vw;
@@ -76,9 +75,9 @@ main {
 	border-radius: 2vw;
 	border-bottom-left-radius: 0vw;
 	border-top-left-radius: 0vw;
-	height: '40vw';
-	width: '44vw';
-	padding: '1vw';
+	height: 40vw;
+	width: 44vw;
+	padding: 1vw;
 }
 
 #backArrow {
@@ -129,14 +128,15 @@ p {
 	.text-container {
 		font-size: .75em;
 		width: 100%;
-		height: 100%;
+		height: 98.2%;
+		border-radius: 2vw;
 	}
 	.movie-details {
 		font-size: .95em;
 	}
 	.movie-mod {
 		width: 100vw;
-		height: 100vw;
+		height: 102vw;
 	}
 	#watchTrailer {
 		font-size: 2em;
